# ESP32-RevK

./: .gitignore  CMakeLists.txt  ESP32RevK.pages  JSON.pages  Kconfig  Makefile  README.md  buildsuffix  component.mk  halib.c  idfmon.c  jo.c  lecert.h  lwmqtt.c  partitions_2ota.csv  partitions_4m.csv  partitions_8m.csv  pn532.c  pn532.h  revk-dev.md  revk-settings-dev.md  revk-settings-dev.mv  revk-settings.md  revk-user.md  revk.c  revk.h  revk.md  revk_settings.c  sdkconfig.def  sdkconfig.defaults  setbuildsuffix  settings.def  settings_lib.c  settings_lib.h  settings_old.c  suffix  switchsuffix  vl53l0x.c
include/: esp8266_gpio_compat.h  esp8266_rtc_io_compat.h  esp8266_wdt_compat.h  galaxybus.h  halib.h  jo.h  lecert.h  lwmqtt.h  pn532.h  revk.h  vl53l0x.h
